--- a/De_Rode_Loper.mw
+++ b/De_Rode_Loper.mw
@@ -2,6 +2,8 @@
 
 == Presentatoorn ==
 De êeste presentatoorn woarn [[Lieve Ketelsleghers]] en [[Johan Persyn]] in 2000. Kort doarachter kwaamn [[Jo De Poorter]] en [[Tanja Dexters]] derby. Van 2001 tot 2006 werd et ofwisselnd gepresenteerd deur [[Martine Prenen]] en [[Yasmine]]. Up 1 januoari 2007 presenteerde Martine vo de latste ki. Ze werd vervangn deur [[Evy Gruyaert]].
+ti vreet é
+
 
 [[Categorie: TV-serie]]
 [[nl:De Rode Loper]]
