--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -214,6 +214,7 @@ Blanknberge is vereiwigd in e kluchtig liedje van Hugo Matthysen. E poar zinnetj
 ==Externe koppeliengn==
 *[http://www.blankenberge.be Website van de stad]
 *[http://www.blankenberge-online.be Blanknberge-online]
+*[http://www.lokalezoekertjes.be Lokale zoekertjes]
 
 == Scholen ==
 * [http://www.msblankenberge.be Maerlant Middenschole Blanknberge]
