*Empty MediaWiki Message*

--- a/Robrecht_I_van_Vloandern.mw
+++ b/Robrecht_I_van_Vloandern.mw
@@ -13,7 +13,7 @@
 | voader = [[Boudewyn V van Vloandern]]
 | moeder = [[Adela van Mêesn]]
 }}
-'''Robrecht I''', bygenoamd ''den Fries'' (ca. [[1029]]/[[1032|32]] – Kassel (Frankryk), [[13 oktober]] [[1093]]) was [[groaf van Vloandern]] van 1071 tout an z’n dôod. 
+'''Robrecht I''', bygenoamd ''den Fries'' (ca. [[1029]]/[[1032|32]] – [[Kassel]] ([[Vrankryk|Frankryk]]), [[13 oktober]] [[1093]]) was [[groaf van Vloandern]] van 1071 tout an z’n dôod. 
 ==Zyn leevn==
 Je was de twidde zeune van [[Boudewyn V van Vloandern]] en [[Adela van Mêesn]].
 
