--- a/Kassel_(Vrankryk).mw
+++ b/Kassel_(Vrankryk).mw
@@ -28,8 +28,8 @@ Kassel es nen oude stad, want in de [[Romeinn|Rominse]] tyd es 'Castellum Menapi
 In 1328 vochtn de Keirels van [[Klaas Zannekin]] ier de [[Slag by Kassel (1328)|Slag by Kassel]]. Ze verlôorn van de keunienk van Vrankryk.
 
 ==Vlams uutzicht==
-'t Uutzicht van d'uzetjes in Kassel (op de mart bevôorbeeld) is typies Vlams. 
-En oek an ander diengn ku je zyn dat de stad mè Vloandern verboen'n wos. In 'n tyde stoegn d'r in Kassel mêer of 20 meulns; nu nog êentje: de Casteel Meulen. En a ze carnaval viern, goan de Reuzen uut. 
+'t Uutzicht van d'uzetjes in Kassel (op de mart bevôorbeeld) is typisch Vlams. 
+En oek an ander diengn ku je zien dat de stad mè Vloandern verbounn wos. In 'n tyde stoegn d'r in Kassel mêer of 20 meulns; nu nog êentje: de Casteel Meulen. En a ze carnaval viern, goan de Reuzen uut.
 
 ==Radio Uylenspiegel==
 In Kassel es't er nen vrye radio die utzend in 't [[Frans-Vlams]] en doarmee het Vlams wil promootn in Vrankryk. Ze zendn ut ip 91.8FM
