--- a/Iengelmunstr.mw
+++ b/Iengelmunstr.mw
@@ -49,7 +49,7 @@ In [[1075]] bouwde groaf van [[Vloandern]] Ro­brecht de Fries een ver­sterkt k
 *[[Jozef Verhaeghe (1919)|Jozef Verhaeghe]] (1919-1940), militair
 *[[Betty|Betty Owczarek]] (1976), fenomeen, zangeresse (en mediafiguur), z'is bekend gekomn van Big Brother
 *[[Leif Hoste]] (1977), Belgisch coureur
-*[[Nico Mattan]] (17 juli 1971), Belgisch courreur, is uitgeweken naar winkle-sint-eloois
+*[[Nico Mattan]] (17 juli 1971), Belgisch ex-coureur, is uutgeweekn no [[Sint-Eloois-Winkel|Winkle-Sint-Elôois]]
 
 ==Ofbeeldiengn==
 <gallery>
