--- a/Yper.mw
+++ b/Yper.mw
@@ -75,7 +75,7 @@ Wuk dat er specioal is in Yper, is de uutsproake van de lange klienkers ee en oo
 *Brôod is iere brood (lik in 't AN)
 *Wêe is iere wee (wei(de) in 't AN)
 
-Typisch an 't Ypers (en ouk wel in de gemeentn in 't rounde) is 't woord ''enni''. 't E verschillnde betekenissn, 't is te zyn in wuk e zinne daj 't gebruukt. Deurda ze dat zovele zeggn, lachn ze doa stief mei in de reste van de provinsche.
+Typisch an 't Ypers (en ouk wel in de gemeentn in 't rounde) is 't woord ''enni''. 't E verschillnde betekenissn, 't is te zien in wuk e zinne daj 't gebruukt. Deurda ze dat zovele zeggn, lachn ze doa stief mei in de reste van de provinsche.
 
 ==Kernen==
 De gemeente Yper bestoat uut neegn [[dêelgemêente|deelgemeent]]n. Buutn 't stadscentrum zevve (me meer of duust inweuners per vierkantn kilomeiter de dichtsbevookte deelgemeente), liggn der doarround nog de deelgemeentn [[Boezienge]], [[Brieln (Yper)|Brieln]], [[Dikkebus]], [[Elverdienge]], [[Ollebeke]], [[Sient-Jan (Yper)|Sient-Jan]], [[Vloamertienge]], [[Vormezêle|Vormezele]], [[Zillebeke]] en [[Zuudschôte|Zuudschote]].
