*Empty MediaWiki Message*

--- a/De_Rode_Loper.mw
+++ b/De_Rode_Loper.mw
@@ -1,4 +1,4 @@
-'''De Rode Loper''' is e showbizzmagazine up de Vlamsche televisiezender [[één (televisiezender)|één]]. In 't programma komt vooral nieuws an bod uut de film-, muziek-, en modewèreld. 
+{{beg}}'''De Rode Loper''' is e showbizzmagazine up de Vlamsche televisiezender [[één (televisiezender)|één]]. In 't programma komt vooral nieuws an bod uut de film-, muziek-, en modewèreld. 
 
 == Presentatoorn ==
 De êeste presentatoorn woarn [[Lieve Ketelsleghers]] en [[Johan Persyn]] in 2000. Kort doarachter kwaamn [[Jo De Poorter]] en [[Tanja Dexters]] derby. Van 2001 tot 2006 werd et ofwisselnd gepresenteerd deur [[Martine Prenen]] en [[Yasmine]]. Up 1 januoari 2007 presenteerde Martine vo de latste ki. Ze werd vervangn deur [[Evy Gruyaert]].
