--- a/Oalveringem.mw
+++ b/Oalveringem.mw
@@ -34,7 +34,7 @@
 |datum4=01/01/2006
 |}}
 
-'''Oalveringem''' (officieel [[Nederlands]]: ''Alveringem'') is e gemêente in de [[Westoek]].  E dorptje in [[Bachten de Kupe]] da ligt tusschn [[Veurne |Veurn]], [[Yper|Yper]], [[Diksmude]] en de [[Vrankryk|Fransche grenze]], d'r weunn bykan 5000 menschn. 
+'''Oalveringem''' (officieel [[Nederlands]]: ''Alveringem'') is e gemêente in de [[Westoek]]. 't Is e dorptje [[Bachten de Kupe]] da ligt tusschn [[Veurne |Veurn]], [[Yper|Yper]], [[Diksmude]] en de [[Vrankryk|Fransche grenze]], d'r weunn bykan 5000 menschn. 
 
 Je vingt er e masse schône routes voer e toertje mè de vèlo. D'oofdactiviteit van d'Oalveringemsche economie go oogstwaarschynlik 't boern zyn.
 [[Ofbeeldienge:Alveringem - Sint Audomaruskerk.jpg|thumb|left|<Center>Sint Audomaruskerke in Oalveringem]]
