*Empty MediaWiki Message*

--- a/Asterix.mw
+++ b/Asterix.mw
@@ -1,4 +1,4 @@
-[[Ofbeeldienge:Asterix-Asterix.gif|thumb|right|Asterix 'n Galliër]]
+[[Ofbeeldienge:Asterix Park France 2.jpg|thumb|right|Asterix 'n Galliër in ''Parc Astérix'']]
 '''Asterix''' is e [[Vrankryk|Fransche]] stripreekse van Albert Uderzo en René Goscinny. Achter da Goscinny dôodgienk in 1977, et Uderzo ollêne vors edoan. 't Bestoan oundertusschn 33 officiële titels en nog êentige specioale uutgoavn. 
 
 't Goat verre ossan over d'inweuners van e klêen dorptje in Gallië (oude benoamienge van Vrankryk in 'n tyde van de [[Keltn]] en de [[Romeinn]]) die bluuft vichtn teegn de Romeinn, oundermêer teegn [[Caesar]]. Ze kunn mêestol winn deur dan ze e toverdranksje drienkn die ebrouwd is deur nunder druïde ''Panoramix'' en woadeure dan ze ounoverwinnelik kommn.
