--- a/Linux.mw
+++ b/Linux.mw
@@ -1,3 +1,4 @@
+[[Image:Ubuntu 8.04.png|220px|thumb|right|[[ubuntu]]]]
 '''Linux''' is de bezounderste kernel van de open-bron gemeinschappe. De Linux kernel is de basis van styf vele systeemn. De Linux kernel is e UNIX-achtigen. En is gemakt deur de [[Finland|Fin]] Linus Torvalds. En et da gedoan omdatn een uitgebried systeem wilde moakn da iedrêen voe nietn kost gebruukn.
 
 ==Externe koppeliengn==
