Johanna was ton ol dôod

--- a/Bagynof_(Brugge).mw
+++ b/Bagynof_(Brugge).mw
@@ -1,6 +1,6 @@
 {{plat|Brugs}}
 [[Ofbeeldienge:Begijnhofbrugge.jpg|thumb|right|'t Begynof van Brugge]]
-'t '''Bagynof van [[Brugge]]''' (in andere stikkn van de provinsje zeggn ze ''begynof'') is in [[1245]] gesticht deur gravinne [[Johanna I van Constantinopel]], dochter van graaf [[Boudewijn IX]], die toet keizer van Constantinopel gekroand was achter de vierde kruustocht. 
+'t '''Bagynof van [[Brugge]]''' (in andere stikkn van de provinsje zeggn ze ''begynof'') is in [[1245]] gesticht deur gravinne [[Margaretha van Constantinopel]], dochter van graaf [[Boudewijn IX]], die toet keizer van Constantinopel gekroand was achter de vierde kruustocht. 
 [[Ofbeeldienge:Ingangbegynof.jpg|thumb|left|Brugge no de pôorte van 't Bagynof]]
 
 't Bagynof van Brugge, ôok wel ''Begijnhof Ten Wijngaerde'' genoamd, ee zun originèle [[middelêeuwen|middelèèuwse]] structeure kunn oeden.  't Is een geslootn of omriengd deur woater.  Ip de pôorte wo da je deure moet vo binn te goan  stoat er [[1776]], mo de mèèste uzetjes zyn uut de 17ste en 18ste èèuwe.  Der zyn der een poar in neo-gotieke styl uut de 19ste èèuwe en in ’t zudelik dèèl zyn der zelfs nog een poar bewoard gebleven uut de 14ste en 15ste èèuwe.  In 't grôotste uus weunde vroeger de ‘Grootjuffrouw’ die ’t bagynof leidige.  In èèn van de uzetjes is ’t er een muzeum ingericht, '''’t Bagynuzetje''', wo da je ku zien oe dan de bagyntjes vroeger leefdigen.
