--- a/Linux.mw
+++ b/Linux.mw
@@ -1,5 +1,5 @@
 [[Image:Ubuntu 8.04.png|220px|thumb|right|[[ubuntu]]]]
-'''Linux''' is de bezounderste kernel van de open-bron gemeinschappe. De Linux kernel is de basis van styf vele systeemn. De Linux kernel is e UNIX-achtigen. En is gemakt deur de [[Finland|Fin]] Linus Torvalds. En et da gedoan omdatn een uitgebried systeem wilde moakn da iedrêen voe nietn kost gebruukn.
+'''Linux''' is de bezounderste kernel van de openbrongemêenschap. De Linux kernel is de basis van styf vele systeemn. De Linux kernel is een UNIX-achtigen. En is gemakt deur de [[Finland|Fin]] Linus Torvalds. En et da gedoan omdat 'n een uutgebreid systeem wilde moakn da iederêen voe nietn kost gebruukn.
 
 ==Externe koppeliengn==
 *[http://tldp.org/ The Linux Documentation Project - verzoamelpunt van olle (Iengelse) documentoatie over Linux]
