*Empty MediaWiki Message*

--- a/Bagynof_(Brugge).mw
+++ b/Bagynof_(Brugge).mw
@@ -1,5 +1,5 @@
 {{plat|Brugs}}
-[[Ofbeeldienge:Begijnhofbrugge.jpg|thumb|right|'t Begynof van Brugge]]
+[[Ofbeeldienge:Begijnhofbrugge.jpg|thumb|right|'t Bagynof van Brugge]]
 't '''Bagynof van [[Brugge]]''' (in andere stikkn van de provinsje zeggn ze ''begynof'') is in [[1245]] gesticht deur gravinne [[Margaretha van Constantinopel]], dochter van graaf [[Boudewijn IX]], die toet keizer van Constantinopel gekroand was achter de vierde kruustocht. 
 [[Ofbeeldienge:Ingangbegynof.jpg|thumb|left|Brugge no de pôorte van 't Bagynof]]
 
