*Empty MediaWiki Message*

--- a/13_oktober.mw
+++ b/13_oktober.mw
@@ -4,6 +4,8 @@
 *[[1307]] - Jacques de Molay, de latste officiëlen groatmêester van de [[tempeliers]] wor g'arresteerd in [[Parys]] ip bevel van de Franse keuninck [[Filips den Schoonn]].
 ==Geboorn==
 *[[1965]] - [[Johan Museeuw]]
+==Gestorvn==
+*[[1093]] - [[Robrecht I van Vloandern]]
 
 [[Categorie:Datum]]
 
