*Empty MediaWiki Message*

--- a/John_Flanders.mw
+++ b/John_Flanders.mw
@@ -27,7 +27,7 @@ Ounder de noame Johan Flanders wos 't y vorol bekend van 't ferme oantal [[Vlaam
 * De zilveren kaap
 
 == Vlaamse Filmpjes ==
-'''numéros van voren [[den oorloge]]'''
+'''numéros van voren [[Twiddn Weireldôorloge|den oorloge]]'''
 
 42 Het vervloekte land John Flanders 1931  
 
