--- a/Portoal:Weetnschap.mw
+++ b/Portoal:Weetnschap.mw
@@ -23,7 +23,7 @@ __NOTOC__
 
 <h3>[[Ofbeeldienge:Nuvola apps biology.png|40px]] Biologie</h3>
 * Anatomie: [[Dutsekop]], [[Erte]], [[Pense]], [[Rik]], [[Rebbe]], [[Schoere]], [[Caecotrofie]]
-* [[Taxonomie (biologie)|Taxonomie]]: [[Eukaryootn]], [[Familie (biologie)]], [[Geslacht (biologie)]], [[Klasse (biologie)]], [[Carolus Linnaeus]], [[Orde (biologie)]], [[Ounderstamme (biologie)]], [[Ryk (biologie)]], [[Stamme (biologie)]]
+* [[Taxonomie (biologie)|Taxonomie]]: [[Carolus Linnaeus]], [[Eukaryootn]], [[Familie (biologie)|Familie]], [[Geslacht (biologie)|Geslacht]], [[Klasse (biologie)|Klasse]], [[Orde (biologie)|Orde]], [[Ounderstamme (biologie)|Ounderstamme]], [[Ryk (biologie)|Ryk]], [[Stamme (biologie)|Stamme]]
 ** [[Bêesten (ryk)|Fauna]]
 ***[[Zoogdier]]n: [[Alpaca]], [[Egel]], [[Everzwyn]], [[Katte]], [[Keun]], [[Mens]], [[Mol]], [[Muus]], [[Oaze]], [[Ound]], [[Runders]], [[Vos]], [[Wezel]], [[Zwyn]]
 ***[[Veugel]]s: [[Blauwn reiger]], [[Bôomvalke]], [[Ekster]], [[Enne]], [[‎Fazante]], [[Kalkoen]], [[Kokmêeuwe]], [[Koolmêze]], [[Meireloare]], [[Musse]], [[Pietjekuntje]], [[Pimpelmêze]], [[Rôbost]], [[Sperwer]], [[Steirtmêze]], [[Toornvalke]], [[Uuszwoaluwe]], [[Vienke]], [[Vlamsche goai]], [[Witte kwiksteirt]], [[Zworte kroaie]]
