--- a/Chicong.mw
+++ b/Chicong.mw
@@ -35,4 +35,5 @@ In Vloandern klappn we van chikongs of witloof, de Woalen van chicon, d'Ollander
 [[da:Julesalat]]
 [[de:Chicorée]]
 [[fi:Sikuri]]
+[[fr:Endive]]
 [[nl:Witlof]]
