--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -30,7 +30,7 @@ Zyn beste joar tout nu toe is zeker 2005, e joar woarin dat 'n nie ollêne de Ro
 ==Privéleevn==
 Boonen wunt oundertusschn in Monaco, etwot woa dat er vele van ekout en eschreevn is. 't Woarn vele menschn die voundn da Boonen 't e bitje oge in ze bolle krêeg. Zyn accident me ze gilvn Lamborghini ielp oek nie vele.
 
-In 2007 kwaam 'n oek in 't nieuws deur dat 'n in kennisse wos me Sofie Van Vliet, e misje van 16.
+In 2007 kwaam 'n oek in 't nieuws deur dat 'n in kennisse wos me Sofie Van Vliet, e misje van 16. Moa dat es ondertusschen weerol ut, en om ôoren est'n were tôope me Lore, zin vroegere ex.
 
 Oundertusschn bestoat er oek e strip van nem, ''Tommeke''.
 
