--- a/Robrecht_I_van_Vloandern.mw
+++ b/Robrecht_I_van_Vloandern.mw
@@ -22,8 +22,9 @@ Z’aan vuuf kinders:
 * Robert II van Vloandern
 * Adela van Vloandern, getrouwd mè Knud IV van Denemarkn en d’ouders van [[Karel den Goein]]
 * Gertrudis van Vloandern, getrouwd mè Diederik van Ipper-Lotharingn en d’ouders van [[Diederik van den Elzas]]
-* Filips van Loo (zyn ounwettige zeune [[Willem van Yper]] was burggroave van [[Yper]]) 
+* Filips van Lo (zyn ounwettige zeune [[Willem van Yper]] (of Willem van Lo) was burggroave van [[Yper]] en [[Lo]]) 
 * Ogiva, abdis van [[Mêesn]]
+
 ==Groafschap Vloandern==
 Z’n oudere broere  Boudewyn VI, groaf van Vloanderen en Enegouwn, stierf in 1070 en je wierd ipgevolgd deur z’n oudste zeune Arnulf III, bygenoamd ''den Oungelukkign'', azo genoemd deurdat ’n sneuvelde in de [[Slag by Kassel]] (22 februari 1071). Robrecht den Fries, zyn nounkel, was e familieoorloge begost vo ’t groafschap Vloandern, teegn de weeuwe van z’n broere, Richilde van Enegouwn, en eur twi zeuns Arnulf en Boudewyn. 
 
