--- a/Lo.mw
+++ b/Lo.mw
@@ -20,8 +20,8 @@
 * De [[Caesarboom]] is een oude [[taxus]]boom ([[venienboom]]), nevest de [[Westpoorte]]. Volgens de [[legende]] zoe [[Julius Caesar]], ton dat 'n ounder boane was noa [[Brittannië]], ier gestopt èn, e ze peerd an diene boom èn vastegeboendn. 't Is wel e legende, moa toch is diene boom redelik oud.  De holle stam is teegnwoordig toegemetst, en de takkn zyn met yzern stangn oundersteund. Volgens dendroloogn es den bôom die dat er nu stoat, verzekers moa 'n dikke 300 joar oud.
 * De [[Westpoorte]], een oude stadspoorte die ol van round 1250 dateert
 * In de Weststroate stoat 't geboortuus va paster [[Alfons Van Hee]], den eesten oofdredacteur van de volksalmanak [[’t Manneke uut de Mane]].
-* De neogotische [[Sint-Pieterskerke (Lo)|Sint-Pieterskerke]], e stik van de vroegere Augustijnerabdie.
-* 't Oude [[staduus va Lo|staduus en belfort]]
+* De neogotische [[Sint-Pieterskerke (Lo)|Sint-Pieterskerke]], e stik van de vroegere Augustynerabdie (1093-1797).
+* 't Oud [[staduus va Lo|staduus en belfort]]
 * De [[duvetorre]] uut de 18sten eeuw
 <br clear="left" />
 [[Ofbeeldienge:Lo - Sint-Pieterskerk.jpg|thumb|left|<center>Sint-Pieterskerke]]
