*Empty MediaWiki Message*

--- a/Fransman.mw
+++ b/Fransman.mw
@@ -1,6 +1,6 @@
 {{dbintro}}
 
 * een inweuner van [[Frankryk]]
-* 'ntwien die in de zomer in Frankryk by boern ging werken, bevôorbeeld om tarwe te maain.
+* [[Fransmans]], Vlamsche seizoenswerkers die in de zomer in Frankryk by boern gingn werkn.
 
 {{db}}
