--- a/Chicong.mw
+++ b/Chicong.mw
@@ -1,36 +1,46 @@
-[[Ofbeeldienge:Witlof en wortel.jpg|thumb|Chicongs met den wortel der nog an]]
-[[Ofbeeldienge:Trevisane1.jpg|thumb|Rôodlof]]
-
-Ne '''chikong''' es een sorte [[groensel]].
-Dikkens ein ze 't met den term chikong ollêne 't bovenste wit stik van de plante.  De wortel van de plante noemn ze [[krotte]] of [[krotte|prut]] en weird gebruukt vo [[kaffie]] of te liengn.
-
+{{Taxobox | type =  plant
+| afbeelding = Witlof en wortel.jpg
+| afbeeldingtekst = Chicongs met den wortel der nog an 
+| rijk = ''[[Plantae]]'' (Plantn)
+| stam = ''[[Embryophyta]]'' (Landplantn)
+| klasse = ''[[Spermatopsida]]'' (Zoadplantn)
+| orde = ''[[Asterales]]''
+| familie = ''[[Asteraceae]]'' (Composietn)
+| geslacht = ''[[Cichorium]]'' (Chicoreie)
+| taxon = [[sôorte (biologie)|Sôorte]]
+| w-naam =  ''Cichorium intybus ''
+| auteur =  (Hegi) J.Holub  
+| datum = 1993
+}}
+Ne '''chicong''' es een sorte [[groensel]].
+Dikkens ein ze 't met den term chicong ollêne 't bovenste wit stik van de plante. De wortel van de plante noemn ze [[krotte]] of prut en weird gebruukt vo [[kaffie]] of te liengn.
 ==Maniere van kwêekn en sortn==
-Chikongs wordn ip 'n hêle specioale maniere gekwêekt.
+Chicongs wordn ip 'n hêle specioale maniere gekwêekt.
 
-Eerst wordt er chikorei gezoaid (familie van roodlof en andyvie) en de wortels wordn geôogst.
+Eerst wordt er chicoreie gezoaid (familie van rôodlof en andyvie) en de wortels wordn geôogst.
 Ton wordn de wortels in bakkn gezet, overdekt met eirde en nen doek zoda ze in 'n dounkern zittn.
 
-Achter drie à vier weekn es 't er nieuw lôof geschootn: de chikong.
+Achter drie à vier weekn es 't er nieuw lôof geschootn: de chicong.
 Oa 't ie te vele de kloarte ziet, ton is 't 'n gèsgroene.
 
-Dienen chikong wordt verkocht als groundchikong en is den dierstn.
+Dienen chicong wordt verkocht als groundchicong en is den dierstn.
 De goekopere versie, die veel minder bitter es, es op woater gekwêekt (hydrokultuur).
-Roodlof eit rô kropkes, genoamd [[salade van Verona]].
+Rôodlof eit rô kropkes, genoamd [[salade van Verona]].
 
-Chikongs word'n surtout gekwêekt in België, Olland en Nôord-Vrankryk. By oes zyn d'er hêel wa kleine chikongkwêkeryen.
+Chicongs wordn surtout gekwêekt in België, Olland en Nôord-Vrankryk. By oes zyn d'er hêel wa klêne chicongkwêkeryen.
 
 ==Bereidiengn==
 * in stikskes gekapt, gemingeld me [[mayonaise]]; ideoal me [[frietn]]
 * gestoofd in [[beuter]] me ne goen droai [[peper]] en [[notevaschoa|notemuskoat]]
-* saloa me stikskes chikong, appels en rô bêetn, veldsaloa, 'n poar bladjes vèsche versneen munt en ne klak vinaigrette (me frambôzeazyn)
-* chikongs in rollekes [[espe]] me puree in den oven: 'n echte Vlamsche specialiteit
+* saloa me stikskes chicong, appels en rô bêetn, veldsaloa, 'n poar bladjes vèsche versneen munt en ne klak vinaigrette (me frambôzeazyn)
+* chicongs in rollekes [[espe]] me puree in den oven: 'n echte Vlamsche specialiteit
 
-Vo de bereidinge in rollekes espe: chikongs kookn, loatn uutlekkn, in espe rollen, overzoppn met 'n bechamelsause met styf veel koas, nog koas en chapelure derip en gratineren in den oven totdat er e licht korstje ip is.
-
+Vo de bereidinge in rollekes espe: chicongs kookn, loatn uutlekkn, in espe rollen, overzoppn met 'n bechamelsause met styf veel koas, nog koas en chapelure derip en gratineren in den oven totdat er e licht korstje ip is.
 ==Noamn==
-In Vloandern klappn we van chikongs of witloof, de Woalen van chicon, d'Ollanders van witlof, en de Fransmans van endives. Da latste gift verwarring me de andyvie (saloa) en doarom zoudn ze't wel ne kê chicorées durvn noemn.
+In Vloandern klappn we van chicongs of witloof, de Woalen van chicon, d'Ollanders van witlof, en de Fransmans van endives. Da latste gift verwarring me de andyvie (saloa) en doarom zoudn ze't wel ne kê chicorées durvn noemn.
 
 [[Categorie:Groensel]]
+[[Categorie:Asteraceae]] 
 
 [[da:Julesalat]]
 [[de:Chicorée]]
