--- a/Zêesterre.mw
+++ b/Zêesterre.mw
@@ -4,12 +4,12 @@
 |afbeeldingtekst=Geweune zêesterre
 |rijk=[[Animalia]] (Bêestn)
 |stam=[[Echinodermata]] (Stekkervelbêestn)
-|klasse=[[Asteroidea]] (Zêesterren)
-|w-naam= ''Asterias rubens''}}
+|taxon=Klasse
+|w-naam= ''[[Asteroidea]]''}}
 De '''zêesterre''' of '''zeisterre''' (''Asteroidea'') es een klasse van de stekkervelbêestn (''Echinodermata''). 
 
 ==Uutzicht==
-De zêesterre es een zêebêeste, die mêestal uut 5 oarmn bestoat moa d'r zyn d'r ook die d'r veel mêer en. De klêenste sôorte wordt moa 1 cm grôot en de grotste zêesterre kan 1 m wordn met een oarmlengte van 45 cm. Et eit een kleur da varieert van geel over oranje tot rôod, moar ook pupere, blauwe en groene sôorten bestoan. Ze zyn plat en stervormig en ip udder oarms stoan der stekkers. An de ounderkant van de oarms stoan der zuugnappn. De mound zit vanounder in 't middn, en sluut direct an ip de moage. De geweune zêesterre stulpt een dêel van de moage noa buutn en drukt 't teegn de prooi. Ton moakn uutgescheidn enzymen 't eetn vloeiboar. Zêesterren oasemen deur uutstulpingen in under vel en de voetjes.
+De zêesterre es een zêebêeste, die mêestal uut 5 oarms bestoat moa d'r zyn d'r ook die d'r veel mêer en. De klêenste sôorte wordt moa 1 cm grôot en de grotste zêesterre kan 1 m wordn met een oarmlengte van 45 cm. Et eit een kleur da varieert van geel over oranje tot rôod, moar ook pupere, blauwe en groene sôorten bestoan. Ze zyn plat en stervormig en ip udder oarms stoan der stekkers. An de ounderkant van de oarms stoan der zuugnappn. De mound zit vanounder in 't middn, en sluut direct an ip de moage. De geweune zêesterre stulpt een dêel van de moage noa buutn en drukt 't teegn de prooi. Ton moakn uutgescheidn enzymen 't eetn vloeiboar. Zêesterren oasemen deur uutstulpingen in under vel en de voetjes.
 
 De Zêesterre leeft ounder woater en goat vôoruut me zyn klêne voetn me zuugnappn. Et gebruukt die zuugnappn ôok om schelpdiern, gelik [[mussel|mossel]]s en klêne [[slekke]]n t'oopnen.
 
@@ -25,7 +25,7 @@ In et vôor-en noajoar verspreidn de zêesterrn sperma en eicelln in 't woater. 
 ==Varia==
 Verwar het bêest nie me ne [[User:Zeisterre|Zeisterre]], ne gebruuker ip deze wikipedia.
 
-[[Ofbeeldienge: Nerr0878.jpg|thumb|left|Verschillende soortn zêesterren]]
+[[Ofbeeldienge: Nerr0878.jpg|thumb|left|<center>Verschillige sôortn zêesterren]]
 
 [[Categorie: Zêesterre]]
 
