*Empty MediaWiki Message*

--- a/Fransmans.mw
+++ b/Fransmans.mw
@@ -1,4 +1,4 @@
-De '''Fransmans''' of "bêtemann" woaren [[Vloandern|Vlamsche]] sizoenswerkers die olle joare noa [[Vrankryk]] trokkn voe te goan werkn in de [[bête|bêetn]] of in de chicorei-astn. In Vrankryk noemdn ze under "Les Godverdommes". 
+De '''Fransmans''' of "bêtemann" woaren [[Vloandern|Vlamsche]] sizoenswerkers die in de 19ste en begun 20ste êeuwe olle joare noa [[Vrankryk]] trokkn voe te goan werkn in de [[bête|bêetn]] of in de chicorei-astn. In Vrankryk noemdn ze under "Les Godverdommes". 
 
 In de gemêente [[Kookloare]] is ter e museum over de Fransmans en ook in [[Oalbeke]], [[Klerkn]] en [[Madône]] stoan d'r monumentn.
 ==Externe koppelienge==
