*Empty MediaWiki Message*

--- a/Zêesterre.mw
+++ b/Zêesterre.mw
@@ -5,7 +5,7 @@
 |rijk=[[Animalia]] (Bêestn)
 |stam=[[Echinodermata]] (Stekkervelbêestn)
 |taxon=Klasse
-|w-naam= ''[[Asteroidea]]''}}
+|w-naam= ''Asteroidea''}}
 De '''zêesterre''' of '''zeisterre''' (''Asteroidea'') es een klasse van de stekkervelbêestn (''Echinodermata''). 
 
 ==Uutzicht==
