--- a/Chicong.mw
+++ b/Chicong.mw
@@ -13,7 +13,7 @@
 | datum = 1993
 }}
 Ne '''chicong''' es een sorte [[groensel]].
-Dikkens ein ze 't met den term chicong ollêne 't bovenste wit stik van de plante. De wortel van de plante noemn ze [[krotte]] of prut en weird gebruukt vo [[kaffie]] of te liengn.
+Dikkens ein ze 't met den term chicong ollêne over 't bovenste wit stik van de plante. De wortel van de plante noemn ze [[krotte]] of prut en weird gebruukt vo [[kaffie]] of te liengn.
 ==Maniere van kwêekn en sortn==
 Chicongs wordn ip 'n hêle specioale maniere gekwêekt.
 
