*Empty MediaWiki Message*

--- a/Illig-Bloedprocessie.mw
+++ b/Illig-Bloedprocessie.mw
@@ -10,3 +10,4 @@ De relikwie (een poar druppels gestold bloed) wordt bewoard in een lankwerpig fl
 [[Categorie: Middelêeuwen]]
 
 [[en:Procession of the Holy Blood]]
+[[nl:Heilig-Bloedprocessie]]
