--- a/Illig-Bloedprocessie.mw
+++ b/Illig-Bloedprocessie.mw
@@ -1,6 +1,6 @@
 {{plat|Brugs}}
-[[Image:Procession of the Precious Blood of Jesus Christ-Bruges; het conopeum.JPG|thumb]]
-D' '''Illig-Bloedprocessie''' et olle joare platse ip [[Onz-Eer-Emelvoart]] in [[Brugge]]. T'is een [[Christndom|Christelikke]] [[processie]] die bestoat uut grôte wagens  en doaby veel groepn die vertelliengen uut et [[Oud Testament | Oud]] en [[Nieuw Testament]] verbeeldn.
+[[Image:Procession of the Precious Blood of Jesus Christ-Bruges; het conopeum.JPG|thumb|Et conopeum]]
+D' '''Illig-Bloedprocessie''' eet olle joare platse ip [[Onz-Eer-Emelvoart]] in [[Brugge]]. T'is een [[Christndom|Christelikke]] [[processie]] die bestoat uut grôte wagens  en doaby veel groepn die vertelliengen uut et [[Oud Testament | Oud]] en [[Nieuw Testament]] verbeeldn.
 
 De reedn vo de stoet is 't feit da [[krusvoart| kruusvoarders]] oender de leidinge van [[Diederik van den Elzas]] in 1150 't Bloed van [[Jezus van Nazareth | Christus]] ('t [[Illig Bloed]] dus) noa Brugge zoen meegebrocht hen uut [[Palestina]]. Diederik zou de relikwie gekreegn hen, met toestemmienge van de patriarch van Jerusalem, uut handn van zyn schôonbroere Boudewijn III van Anjou, keunienk van Jerusalem. Sedert ton, en dus ol vo méér dan 800 joar, goat d'Illig-Bloedprocessie deure. Vo de Bruggeliengen is dat een specioalen oogdag en d'er komt ook oltyd veel volk kyken.
 ==De relikwie van ’t Illig Bloed in Brugge==
