--- a/Zilvermêeuwe.mw
+++ b/Zilvermêeuwe.mw
@@ -23,7 +23,7 @@ Een zilvermêeuwe kan 32 joar oud wordn.
 De zilvermêeuwe leeft surtout an de kustn van Nôord-en Middn-Europa.
 
 == Voedienge==
-Zilvermêeuwen zyn alleseters. Z’eetn [[visschn|vis]], [[mussel]]s, [[kokkel]]s, [[krabbe|krabbn]], worms, eiers en klêne [[veugel]]s. Ze zoekn ook eetn in vuulzakkn en ip vuulhoopn.
+Zilvermêeuwen zyn alleseters. Z’eetn [[visschn|vis]], [[mussel]]s, [[kokkel]]s, [[krabbe|krabbn]], [[tettienk|worms]], eiers en klêne [[veugel]]s. Ze zoekn ook eetn in vuulzakkn en ip vuulhoopn.
 
 ==Vôortplantienge==
 ’t Deurt vier tout zeven joar êer dat de zilvermêeuwe geslachtsrype wordt. ’t Wuvetje legt drie eiers in een nest gemakt van plantn. Achter 28 doagn broedn tusschn april en juli kommn de joungsjes uut.
