--- a/Portoal:Weetnschap.mw
+++ b/Portoal:Weetnschap.mw
@@ -26,7 +26,7 @@ __NOTOC__
 * [[Taxonomie (biologie)|Taxonomie]]: [[Carolus Linnaeus]], [[Eukaryootn]], [[Familie (biologie)|Familie]], [[Geslacht (biologie)|Geslacht]], [[Klasse (biologie)|Klasse]], [[Orde (biologie)|Orde]], [[Ounderstamme (biologie)|Ounderstamme]], [[Ryk (biologie)|Ryk]], [[Stamme (biologie)|Stamme]]
 ** [[Bêesten (ryk)|Fauna]]
 ***[[Zoogdier]]n: [[Alpaca]], [[Egel]], [[Everzwyn]], [[Katte]], [[Keun]], [[Mens]], [[Mol]], [[Muus]], [[Oaze]], [[Ound]], [[Runders]], [[Vos]], [[Wezel]], [[Zwyn]]
-***[[Veugel]]s: [[Blauwn reiger]], [[Bôomvalke]], [[Ekster]], [[Enne]], [[‎Fazante]], [[Kalkoen]], [[Kokmêeuwe]], [[Koolmêze]], [[Meireloare]], [[Musse]], [[Pietjekuntje]], [[Pimpelmêze]], [[Rôbost]], [[Sperwer]], [[Steirtmêze]], [[Toornvalke]], [[Uuszwoaluwe]], [[Vienke]], [[Vlamsche goai]], [[Witte kwiksteirt]], [[Zworte kroaie]]
+***[[Veugel]]s: [[Blauwn reiger]], [[Bôomvalke]], [[Ekster]], [[Enne]], [[‎Fazante]], [[Kalkoen]], [[Kokmêeuwe]], [[Koolmêze]], [[Meireloare]], [[Musse]], [[Pietjekuntje]], [[Pimpelmêze]], [[Rôbost]], [[Sperwer]], [[Steirtmêze]], [[Toornvalke]], [[Uuszwoaluwe]], [[Vienke]], [[Vlamsche goai]], [[Witte kwiksteirt]], [[Zilvermêeuwe]], [[Zworte kroaie]]
 ***[[Vissn]]: ‎[[Chlamydogobius eremius]]
 ***[[Worm]]n: [[Tettink|Tettink (Teirienk)]]
 ***[[Wêekbêestn]]: [[Schelpe]]
