--- a/Koap_Blankenesse.mw
+++ b/Koap_Blankenesse.mw
@@ -12,7 +12,7 @@ De koap makt deel uut van 't gemeentje [[Skoale]] (Frans: ''Escalles'').
 De witte rotsn bestoan uut [[kryt]] (kolk) en [[mergel]], dat es e witte [[klyte|klytsoorte]]. An den ounderkant van de koape ligt er e gefossileerd strand da dateert van 't begun van et [[Kwartair]], dus zo'n 2 miljoen joar leen.  A je chance eit, kun je of en toe fossieln lik [[ammoniet]]n vindn.
 
 ==Nateure==
-Deur dat er veel kolk zit in de ground eit er em round de koape [[flora]] ountwikkeld die uutzounderlik es vo e land lik Vrankryk. Deur de moeilik toegankelikke rotsn es ook de [[fauna]] ier styf divers. Ge vindt er byvoorbeeld [[zilvermeeuwn]], [[kauw]]n, de [[nôordse stormveugel]], [[stern]]n en specioale soortn [[zwoaluwe|zwoaluwn]].
+Deur dat er veel kolk zit in de ground eit er em round de koape [[flora]] ountwikkeld die uutzounderlik es vo e land lik Vrankryk. Deur de moeilik toegankelikke rotsn es ook de [[fauna]] ier styf divers. Ge vindt er byvoorbeeld [[zilvermeeuwe|zilvermeeuwn]], [[kauwe|kauwn]], de [[nôordse stormveugel]], [[stern]]n en specioale soortn [[zwoaluwe|zwoaluwn]].
 
 ==Monument==
 Up de koape stoat er e monument in de vorm van nen obelisk. J'es gewyd an de Fransche en Iengelsche soldoatn die binst den [[Twiddn Weireldoorloge]] under leevn geloatn ein by de verdedigienge van de strategisch belangrikke zeenauwte [[Nauw van Kales]].
