--- a/Doornik.mw
+++ b/Doornik.mw
@@ -47,7 +47,8 @@ In 880 plunderdn de [[Viking|Noormann]] de Scheldestreke en Doornik wierd under 
 [[Ofbeeldienge:Tournai JPG001.jpg|thumb|left|<center>Onze-Lieve-Vrouwekathedroale]]
 
 Ounder [[Karel den Kletsn]], d’n eestn keunink van [[West-Francië]], ountstound ’t [[groafschap Vloandern]] dat in leen bleef by de [[Vrankryk|Franschn]] keunink.
-In 993-994 verdeelde Boudewyn IV, Groaf van Vloandern, zyn groafschap in drie deeln: [[Gent]] (mè ’t land van Waas), Doornik (mè [[Kortryk]] en Sint-Omaars) en [[Brugge]].
+
+In 993-994 verdeelde [[Boudewyn IV van Vloandern|Boudewyn IV]], Groaf van Vloandern, zyn groafschap in drie [[Kasselry|burggroafschappn]]: [[Gent]] (mè ’t land van Waas), Doornik (mè [[Kortryk]] en Sint-Omaars) en [[Brugge]].
 
 In 1141 wierdn de werkn gestart van de Romoansche Onze-Lieve-Vrouwe[[kathedroale]], die in 1171 voltooid was en ingewyd wierd deur d’n aartsbisschop Hendrik van Frankryk.
 
