--- a/Robrecht_I_van_Vloandern.mw
+++ b/Robrecht_I_van_Vloandern.mw
@@ -28,7 +28,7 @@ Z’aan vuuf kinders:
 ==Groafschap Vloandern==
 Z’n oudere broere  Boudewyn VI, groaf van Vloanderen en Enegouwn, stierf in 1070 en je wierd ipgevolgd deur z’n oudste zeune Arnulf III, bygenoamd ''den Oungelukkign'', azo genoemd deurdat ’n sneuvelde in de [[Slag by Kassel]] (22 februari 1071). Robrecht den Fries, zyn nounkel, was e familieoorloge begost vo ’t groafschap Vloandern, teegn de weeuwe van z’n broere, Richilde van Enegouwn, en eur twi zeuns Arnulf en Boudewyn. 
 
-Filips I van [[Frankryk]] en [[Willem de Veroveroare]], die keunink van [[Ingeland]] gewordn was, stoundn an de kant van Arnulf III. 
+Filips I van [[Frankryk]] en [[Willem den Veroveroare]], die keunink van [[Ingeland]] gewordn was, stoundn an de kant van Arnulf III. 
 Uuteindelik kreeg Robrecht den Fries toch de steun van de keunink van Frankryk en je liet em erkenn ols groaf van Vloandern. Zyn schôonzuster Richilde en eur zeune Boudewyn ieldn ’t groafschap Enegouwn.
 
 In 1086 vertrok Robrecht de Fries no ’t Illig Land (1086–1089). Je liet ’t regentschap over Vloandern in andn van z’n zeune, de loatern Robrecht II van Jeruzalem.
