--- a/Boudewyn_IV_van_Vloandern.mw
+++ b/Boudewyn_IV_van_Vloandern.mw
@@ -17,7 +17,7 @@ Achter d’n dôod van Boudewyns voader Arnulf II in 988, arrangeerde de Fransch
 
 O Boudewyn IV z’n voader ipvolgde wast ’n nog minderjoarig en woarn z’n moeder en z’n stiefvoader Robrecht II z’n regentn. Hugo Capet aa z’n steun beloofd en ze kostn die steun goed gebruukn want achter d’n dôod van Arnulf II woarn d’r oadelikke rebelln in ipstand gekommn. 
 
-Boudewyn a surtout miserie met de Kortykzoann, eest geleid deur Baldzo en loater deur Eilbodo, die ol begost was mè z’n eign muntn te sloan. Vo zyn gezag were te winn vroeg Boudewyn steun an d’inweuners van [[Oarelbeke]], die ossan trouw gebleevn woarn an under groaf en doadeure gedeurig gepest wierdn deur de Kortrykzoann en nu were. On z’oordn da Boudewyn ip weg was vo ’t gebied were ounder zyn gezag te krygn, vieln z'Oarelbeke binn en stoakn ze ’t stadje in brande. Da was nie slim want nu kreegn ze de bevolkienge van ol d’andere omliggende dorpn teegn under en azo kost de groaf zounder vele moeite zyn gezag were erstelln.
+Boudewyn a surtout miserie met de Kortrykzoann, eest geleid deur Baldzo en loater deur Eilbodo, die ol begost was mè z’n eign muntn te sloan. Vo zyn gezag were te winn vroeg Boudewyn steun an d’inweuners van [[Oarelbeke]], die ossan trouw gebleevn woarn an under groaf en doadeure gedeurig gepest wierdn deur de Kortrykzoann en nu were. On z’oordn da Boudewyn ip weg was vo ’t gebied were ounder zyn gezag te krygn, vieln z'Oarelbeke binn en stoakn ze ’t stadje in brande. Da was nie slim want nu kreegn ze de bevolkienge van ol d’andere omliggende dorpn teegn under en azo kost de groaf zounder vele moeite zyn gezag were erstelln.
 
 ==Reorganisoatie==
 Achter die moeilikke begunperiode van z’n regerienge krêeg Boudewyn mêer en mêer macht deur  groundige ervormiengn. Round 993-994 verdêeldegt ie z’n groafschap in drie [[Kasselry|burggroafschappn]], ieder round e groafelikkn burcht. De burggroave (Fr.: vicomte, Eng.: viscount) kreegt de leidienge over de besteurlikke, de rechterlikke en de militaire organisoatie en was platsvervanger van de groaf.
