/* Opportunistisch */  oeps, ae is Frans-Vlams...

--- a/Boudewyn_V_van_Vloandern.mw
+++ b/Boudewyn_V_van_Vloandern.mw
@@ -17,7 +17,7 @@ Boudewyn V droaide me de wiend: 'n êne ki kwaamn in opstand teegn de Duutschn k
 
 Zyn andern zeune, Robrecht de Fries, trouwde me Geertrui, weeuwe van de groaf van Olland. Azo kost Vloandern oek e stiksje meiklappn voor e grôot dêel van de [[Nederlandn]].
 
-Zyn dochter, Mathilda, trouwde in [[1051]] me [[Willem de Veroveraar]]. Deur dienen trouw krêeg Willem de steun van Boudewyn oet ie in [[1066]] probêerde vo Ingeland te verôveren. Achter eur krôninge, in [[1068]], wierd ze keuniginne Maud. D'er zyn d'er die zeggn da ze zy  't [[tapyt van Bayeux]] zou gemakt èn.
+Zyn dochter, Mathilda, trouwde in [[1051]] me [[Willem den Veroveroare]]. Deur dienen trouw krêeg Willem de steun van Boudewyn oet ie in [[1066]] probêerde vo Ingeland te verôveren. Achter eur krôninge, in [[1068]], wierd ze keuniginne Maud. D'er zyn d'er die zeggn da ze zy  't [[tapyt van Bayeux]] zou gemakt èn.
 
 Boudewyn a zukke goe noame dat ie by den dôod van de Franse keunink Hendrik I in [[1060]] voogd wierd van zyne minderjoarige trôonupvolger [[Filips I van Vrankryk|Filips I]].
 
