--- a/Ounderdjoarigen_ôorlog.mw
+++ b/Ounderdjoarigen_ôorlog.mw
@@ -1,7 +1,7 @@
 Den '''Ounderdjoarigen ôorlog''' e ne stryd tusschen de Iengelsche en de Fransche, en te vo‘t grootste gedêelte uutevochtn gewêst in [[Vrankryk]]. Officiel et et moa geduurd van [[1337]] tot [[1453]], moa eigentlik was 't ol vêle vroegr ambras.
 
 ==Oanleidinge==
-‘t Es ollemoale begunn ton dat den ertog van [[Normandië]], [[Willem de veroveraar]], [[Iengeland]] et kunnen verovern na de [[Slag by Hastings]]. Z’en ton achteraf Normandië en Iegeland moetn verdêeln tusschn de twêe erfgenoamn, moa de keunienk van Iengeland wo ni content. Y at geirn ook Normandië d'r by ged. Mo ton et de Iengelse keunienk de [[Slag by Bouvines]] verloorn et moest y Normandie teruggeevn oan de Fransche.
+‘t Es ollemoale begunn ton dat den ertog van [[Normandië]], [[Willem den Veroveroare]], [[Iengeland]] et kunnen verovern na de [[Slag by Hastings]]. Z’en ton achteraf Normandië en Iegeland moetn verdêeln tusschn de twêe erfgenoamn, moa de keunienk van Iengeland wo ni content. Y at geirn ook Normandië d'r by ged. Mo ton et de Iengelse keunienk de [[Slag by Bouvines]] verloorn et moest y Normandie teruggeevn oan de Fransche.
 
 Oundertusschn at [[Eleonora van Aquitanië]] een huwelyk geslootn me den Iengelsche keunienk en alzo addn d'Iengelsche al bykanst een grôtere party van 't land oas de Fransche keunienk zelve. Up a bepoalde momente stervn de drie zeunn van de Fransche keunienk. De trone passirt noar een nêve van de Fransche keunienk, moar [[Edward III]], de keunienk van Iengeland, die es getrouwd mêe de dochter van den vorigen keunienk, peist dat y keunienk van Vrankryk moeste zyn. Als de Fransche keunienk den titel van ertog van Guyenne afnimt van d'Iengelsche keunienk is de moate vol: Iengeland verkloart de ôorlog en pretendeert de Fransche krone.
 
