--- a/Adela_van_Mêesn.mw
+++ b/Adela_van_Mêesn.mw
@@ -3,7 +3,7 @@
 '''Adela van Mêesn''' (°[[Vrankryk]] [[1009]] - [[Mêesn]] [[8 januoari]] [[1079]]), oek gekend lik '''Adela van Vrankryk''' of '''Adela Capet'''. Adela wos e dochter van Robert II, e keunienk va [[Vrankryk]], en Constance van Arles.
 
 == Neur leevn ==
-Ze wos êest getrouwd mi ertog [[Richard III van Normandie]]. Achter zyn dôod is ze in [[1028]] ertrouwd me groaf [[Boudewyn V van Vloandern]]. Tope me nem a ze 4 joens: Boudewyn VI, Mathilda van Vloandern (die trouwde me Willem de Veroveraar), Robrecht I van Vloandern en Hendrik van Vloandern.
+Ze wos êest getrouwd mi ertog [[Richard III van Normandie]]. Achter zyn dôod is ze in [[1028]] ertrouwd me groaf [[Boudewyn V van Vloandern]]. Tope me nem a ze 4 joens: Boudewyn VI, Mathilda van Vloandern (die trouwde me [[Willem den Veroveroare]]), Robrecht I van Vloandern en Hendrik van Vloandern.
 
 Toen da Boudewyn V van Vloandern dôod wos in 1067, gienk Adela na d'abdy va Mêesn. In 1057 adde ze doa e klôoster (in de orde va Sint-Benedictus) esticht voe Fransche edeldames.
 
