--- a/Leuven.mw
+++ b/Leuven.mw
@@ -1,7 +1,7 @@
 {{beg}}
 '''Leuven''' ([[Frans]]: ''Louvain''), es een [[Vloandern|Vloamsche]] [[stad]] en [[gemêente]] in de  Belgische provincie [[Vloams-Brabant]]. Ze is de centroal geleegn ôofdstad van die provincie en ôok de ôofdplatse van 't  bestuurlikke en gerechtelikke [[arrondissement Leuven]]. Leuven eit een ippervlakte van 5663 [[ectoare]] en telt en goe 90.000 inweuners. 
 
-Leuven es surtout bekend voe zyn vestigiengsplekke van de universiteit ([[Katholieke Universiteit Leuven|K.U.Leuven]]), die d'oudste van de [[Loage Landn]] is en beschouwd weird als één van de beste in België en Europa. In Leuven zyn ôok onder mêer gevestigd de multinationoal [[InBev]] (de vroegere[[Brouwery Artois]], en endeke ôok nog [[Interbrew]] g'êetn), de [[Boerenbond]] en het universitair ziekenus [[Gasthuisberg]]
+Leuven es surtout bekend voe zyn vestigiengsplekke van de universiteit ([[Katholieke Universiteit Leuven|K.U.Leuven]]), die d'oudste van de [[Lêge Landn]] is en beschouwd weird als één van de beste in België en Europa. In Leuven zyn ôok onder mêer gevestigd de multinationoal [[InBev]] (de vroegere [[Brouwery Artois]], en endeke ôok nog [[Interbrew]] g'êetn), de [[Boerenbond]] en het universitair ziekenuus [[Gasthuisberg]]
 
 Weegns de êeuwnlange anwezigheid van de brouwery Artois en het studentenleevn weird Leuven ook wel de bierôofdstad van Vloandern/België genoemd. 
 
