*Empty MediaWiki Message*

--- a/Portoal:Ouze_Weireld.mw
+++ b/Portoal:Ouze_Weireld.mw
@@ -69,7 +69,7 @@ Stee'n en gemêentn buutn West-Vloandern
 <h3>[[Ofbeeldienge:Nuvola apps package network.png|40px]] Steedn en gemêentn buutn West-Vloandern</h3>
 
 * '''[[België]]'''
-**[[Antwerpn]], [[Bléharies]], [[Brussel]], [[Charleroi]], [[Deinze]] ([[Astene]], [[Bachte-Maria-Leerne]], [[Meigem]], [[Wontergem]]), [[Doornik]], [[Êeklo]], [[Gent]], [[Koomn (Belgie)]], [[Lier (België)]], [[Oudenoarde]], [[Ploegsteirt]], [[Scheldewindeke]]
+**[[Antwerpn]], [[Bléharies]], [[Brussel]], [[Charleroi]], [[Deinze]] ([[Astene]], [[Bachte-Maria-Leerne]], [[Meigem]], [[Wontergem]]), [[Doornik]], [[Êeklo]], [[Gent]], [[Koomn (Belgie)]], [[Leuven]], [[Lier (België)]], [[Oudenoarde]], [[Ploegsteirt]], [[Scheldewindeke]]
 **[[Oageland]]
 * '''[[Duutsland]]''': [[Berlyn]], [[Breinigerberg]], [[Frankfurt]], [[Gevelsberg]]
 * '''[[Itoalië]]''': [[Firenze (stad)]], [[Noapels]], [[Verona]]
