*Empty MediaWiki Message*

--- a/Master_Of_Puppets.mw
+++ b/Master_Of_Puppets.mw
@@ -4,7 +4,7 @@
 *James Hetfield (zang en ritmegitaar)
 *Lars Ulrich (drums)
 *Kirk Hammett (leadgitaar)
-*Clyff Burton (bas)
+*Cliff Burton (bas)
 
 ==De numers==
 # Battery
@@ -17,8 +17,9 @@
 # Damage Inc.
 
 ==Aar diengn==
-*Beisn [[Europa|Europeeschn]] tour in 86 is nundern ottobuus begunn sliern nie verre va Lyngby in [[Denemarkn]]. Cliff Burton is toene uut 'n ottobuus ezwiengeld en is derounder erocht. En et nie overleefd. Achter nem kwam Jason Newsted en 'n êestn toer me nem wos ''Cliff 'Em All''. 
+*Beisn [[Europa|Europeeschn]] tour in 86 is nundern ottobuus begunn sliern nie verre va Lyngby in [[Denemarkn]]. Cliff Burton is toune uut 'n ottobuus ezwiengeld en is derounder erocht. E 'n et nie overleefd. Achter nem kwam Jason Newsted en 'n êestn toer me nem wos ''Cliff 'Em All''. 
 *''Master Of Puppets'' goat over versloavienge a cocaïne.
+*''Disposable Heroes'' is e numer over oevele da 't leevn van e geweunn soldoat mo weird is.
 
 [[Categorie:Ploate van Metallica]]
 
