*Empty MediaWiki Message*

--- a/Bikschôte.mw
+++ b/Bikschôte.mw
@@ -15,27 +15,27 @@
 |dichtheid=104
 |postcode=8920
 |}}
-'''Bikschôte''' is e landelike dêelgemêente van [[Langemark-Poelkapelle]] en grenst an [[Nôordschote]], [[Merkem]], [[Langemark]] en [[Zuudschôte]]-[[Boezienge]].
-Der is e gemêentelike kleuter- en basisschole en verschillige verênigingen. Tot 1970 wos et gemêente op zyn eign.
+'''Bikschôte''' is e landelikke dêelgemêente van [[Langemark-Poelkapelle]] en grenst an [[Nôordschote]], [[Merkem]], [[Langemark]] en [[Zuudschôte]]-[[Boezienge]].
+'t Is e gemêentelikke kleuter- en basisschole en 't zyn oek verschillige verênigingen. Tot 1970 wos et gemêente op zyn eign.
 
 ==Etymologie==
-'t Woapenschild van Bikschôte (of ''Bixschoote'' gelyk dat et overtyd werd geschreevn) tôogt een omheinige of een beschuttinge (vroeger: ''scho(o)te'') nevenst e beke (''bik'').
-'t Suffix ''-scho(o)te'' vinden we were in [[Zuudschôte]], [[Nôordschôte]] en [[Oundschôte]] en is e verwiezinge noar d'outn beschuttingn da je tussen de verschillige landeryn kost werevindn.
+'t Woapenschild van Bikschôte (of ''Bixschoote'' gelyk dat et overtyd werd geschreevn) tôogt een omeinige of een beschuttinge (vroeger: ''scho(o)te'') nevenst e beke (''bik'').
+'t Suffix ''-scho(o)te'' vindn we were in [[Zuudschôte]], [[Nôordschôte]] en [[Oundschôte]] en is e verwyzinge noar d'outn beschuttingn da je tussn de verschillige landeryen kost werevindn.
 
 ==Beist 'n Êeste Weireldoorloge==
 Bikschôte wos êen van de mêest bevochtn dorpsjes beist den ''Eestn slag vo Yper'' ([[Êeste Weireldoorloge]]).
 De grotstn slag was ip [[21 oktober]] [[1914]] toen dat de Duutsche ('t 26ste en 27ste Duutsche Reservekorps) te zessen 's nuchtens noa Langemark trokkn vo were e stik van 't Ieperleekanoal te bezettn. Zudder bestoundn voornamelik uut oungetrainde studentn en ander jounge gasten en zyn en masse afgeslacht gewist deur de Brittn. Op 't [[Duuts militair kerkhof]] in Langemark liggen der 3000 Duutsche slachtoffers.
 
-Op de grenze by Zuudschôte ligt 't gehucht [[Stêenstroate (gehucht)|Stêenstroate]] woadat de Duutsche op [[22 april]] [[1915]] vo den êeste ki [[Yperiet|gifgas]] ein gebezigd.
+Op de grenze by Zuudschôte ligt 't gehucht [[Stêenstroate (gehucht)|Stêenstroate]] woadat de Duutsche op [[22 april]] [[1915]] vo den êeste ki [[Yperiet|gifgoaze]] ein gebezigd.
 
 ==Bezienswoardigeedn==
 In Bikschôte is 't er e wandelroute ''Het Vredespad'' (6 of 10,5 km) die in 't têekn van den Êeste Weireldoorloge stoat<ref>[http://www.langemark-poelkapelle.be/toerisme/pad_vrede.html Plan van de wandelroude ''Vredespad'']</ref>.
 
 ===Sent-Andreaskerke===
-Beist 'n Êeste Weireldoorloge es d'ôorsprounkelike kerke hêel vermassakreerd gewist.
-In de joaren achter den oorloge en ze z'erbouwd: de Sent-Andreaskerke is gebouwd in de joarn 1922-1924 naar een ountwerp van architect [[Marcel Hocepied]]. In 't brandglasroam an de rechterkant kun je 't woapenschild van Bikschôte werevindn. 
-De neogotische kerke is e driebeukige hallenkerke en is gebouwd in gelige bakstêenn.
-Rond de kerk ligt een typisch landelik kerkof met de Kapel Onze Lieve Vrouw van Rust en Vrede.
+Beist 'n Êeste Weireldoorloge es d'ôorsprounkelikke kerke hêel vermassakreerd gewist.
+In de joaren achter den oorloge en ze z'erbouwd: de Sient-Andreaskerke is gebouwd in de joarn 1922-1924 naar een ountwerp van architect [[Marcel Hocepied]]. In 't brandglasroam an de rechterkant kun je 't woapenschild van Bikschôte werevindn. 
+De neogotische kerke is e driebeukige allnkerke en is gebouwd in gelige briekn.
+Rond de kerk ligt een typisch kerkof met de Kapel Onze Lieve Vrouw van Rust en Vrede.
 
 ===Beeuwsaertmeuln===
 De Beeuwsaertmeuln is een outn windmeuln in de Meulnstroate.
@@ -43,7 +43,7 @@ De meuln is gebombardeerd in 'n Êeste Weireldoorloge en is sedert ton nie mi ge
 Nu zyn z'em an 't restaureern: achter d'ontmantelienge goan z'em hêel erbouwn.
 
 ==Europees Kampioenschap Pompoenslingern==
-Sinds 2004 organiseert de [[Landelijke Gilde]] van Bikschôte alle joare in september 't Europees Kampioenschap Pompoenslingern. By dien sport (populair in 't zuuden van [[Amerika|VS]], woadat ze 't ''pumpkin chunkin'' noemn) is 't de bedoeling van n [[pompoen]] zo verre meuglik weg te smytn met e katapult of e trebuchet. De ervoaring lêert dat diepgevrozen pompoenn 't verst weg te slingern zyn omda ze nie direk hêel in frut volln.
+Sinds 2004 organiseert de [[Landelijke Gilde]] van Bikschôte alle joare in september 't Europees Kampioenschap Pompoenslingern. By dien sport (populair in 't zuuden van de[[Amerika|VS]], woadat ze 't ''pumpkin chunkin'' noemn) is 't de bedoeling van n [[pompoen]] zo verre meuglik weg te smytn met e katapult of e trebuchet. De ervoaring lêert dat diepgevrozen pompoenn 't verst weg te slingern zyn omda ze nie direk hêel in frut volln.
 
 ===Winnoars===
 *[[2007]]: 't Team Bisschop uut Bikschôte zelve met underne katapult ''Spiraaltje'' me 460 meiters (een nieuw Europees record).
