*Empty MediaWiki Message*

--- a/Bikschôte.mw
+++ b/Bikschôte.mw
@@ -16,7 +16,7 @@
 |postcode=8920
 |}}
 '''Bikschôte''' is e landelikke dêelgemêente van [[Langemark-Poelkapelle]] en grenst an [[Nôordschote]], [[Merkem]], [[Langemark]] en [[Zuudschôte]]-[[Boezienge]].
-'t Is e gemêentelikke kleuter- en basisschole en 't zyn oek verschillige verênigingen. Tot 1970 wos et gemêente op zyn eign.
+'t Is e gemêentelikke kleuter- en basisschole en 't zyn oek verschillige verênigingen. Tot 1970 wos 't e gemêente op zyn eign.
 
 ==Etymologie==
 't Woapenschild van Bikschôte (of ''Bixschoote'' gelyk dat et overtyd werd geschreevn) tôogt een omeinige of een beschuttinge (vroeger: ''scho(o)te'') nevenst e beke (''bik'').
