--- a/Ertsberge.mw
+++ b/Ertsberge.mw
@@ -1,4 +1,4 @@
-{{Infobox Belgische deelgemeente|
+{{beg}}{{Infobox Belgische deelgemeente|
 |kaart1=[[Ofbeeldienge:HertsbergeLocation.svg|300px]]
 |naam= Ertsberge
 |provincie=WVLA
