*Empty MediaWiki Message*

--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -1,4 +1,23 @@
-[[Ofbeeldienge:Tom_Boonen_Nancy_TDF_2005.JPG|right|thumb|300px|Tom Boonen in 'n groenn boai beistn de [[Rounde van Vrankryk]] van 2005.]]
+{{Coureur |
+  zendje                      = [[Ofbeeldienge:Tom_Boonen_Nancy_TDF_2005.JPG|270px|Tom Boonen in 'n groenn boai beistn de [[Rounde van Vrankryk]] van 2005.]] |
+  noame                       = Tom Boonen |
+  bynoame                     = ''Tornado Tom'' |
+  gebortedoatum               = [[15 oktober|15-10]] [[1980]] |
+  gebortestee                 = [[Mol]] |
+  geborteland                 = [[België]] |
+  lengte                      = 192 |
+  gewicht                     = 82 |
+  ploeg                       = Quick·Step-Innergetic |
+  joarn                       = 
+[[2005]]-[[2006]]<br>
+[[2003]]-[[2004]]<br>
+[[2000]]-[[2002]] |
+  vorigeploegen               = 
+Quick·Step - Innergetic<br>
+Quick·Step - Davitamon<br>
+US Postal Service |
+  specialisoatie              = spurter, noordelikke klassiekers |
+}}
 '''Tom Boonen''' ([[Mol (gemêente)|Mol]], [[15 oktober]] [[1980]]) is e [[coureur]] uut Baaln in de Kempn. Wuk da [[Johan Museeuw]] ewist is in de joarn tneegntig, is Boonen in d'êeste 10 joar van d' êentwientigste êeuwe. Buutn e hêeln oop klassiekers en semi-klassiekers, surtout in 't vôorjoar, et 'n ol 'n groenn boai in de [[Rounde van Vrankryk]] ewonn en is 'n [[Weireldkampioenschap (koers)|weireldkampioen]] ekommn in 2005 in [[Madrid]].
 
 ==Jeugd==
