*Empty MediaWiki Message*

--- a/30_meie.mw
+++ b/30_meie.mw
@@ -3,6 +3,7 @@
 *[[1916]] - [[Remi Capoen]]
 
 ==Gestorvn==
+*[[1035]] - [[Boudewyn IV van Vloandern]]
 *[[1640]] - [[Peter Paul Rubens]]
 *[[1945]] - [[Irma Laplasse]]
 
