*Empty MediaWiki Message*

--- a/Rodenbach.mw
+++ b/Rodenbach.mw
@@ -1,6 +1,7 @@
 {{dbintro}}
 
-*[[Ferdinand Rodenbach]]: den êestn Rodenbach die em kwam vestign in [[Roeseloare]] 
+*[[Ferdinand Rodenbach]]: den êestn Rodenbach die em kwam vestign in [[Roeseloare]]
+*[[Pieter Rodenbach]]: geniverstoker in Roeseloare, oudstn zeune van Ferdinand 
 *[[Albrecht Rodenbach]]: de [[Roeseloare|Roeseloarsche]] schryver 
 *[[Brouwery Rodenbach]]: de [[Roeseloare|Roeseloarsche]] brouwery 
 *[[Georges Rodenbach]]: de Vlamsche franstoalige schryver 
