*Empty MediaWiki Message*

--- a/Rodenbach.mw
+++ b/Rodenbach.mw
@@ -4,5 +4,5 @@
 *[[Pieter Rodenbach]]: geniverstoker in Roeseloare, oudstn zeune van Ferdinand 
 *[[Albrecht Rodenbach]]: de [[Roeseloare|Roeseloarsche]] schryver 
 *[[Brouwery Rodenbach]]: de [[Roeseloare|Roeseloarsche]] brouwery 
-*[[Georges Rodenbach]]: de Vlamsche franstoalige schryver 
+*[[Georges Rodenbach]]: de Vlamsche franstoalige schryver van de symbolistische romang ''Bruges-la-morte'' 
 {{db}}
