*Empty MediaWiki Message*

--- a/Tom_Boonen.mw
+++ b/Tom_Boonen.mw
@@ -2,7 +2,7 @@
   zendje                      = [[Ofbeeldienge:Tom_Boonen_Nancy_TDF_2005.JPG|270px|Tom Boonen in 'n groenn boai beistn de [[Rounde van Vrankryk]] van 2005.]] |
   noame                       = Tom Boonen |
   bynoame                     = ''Tornado Tom'' |
-  gebortedoatum               = [[15 oktober|15-10]] [[1980]] |
+  gebortedoatum               = [[15 oktober]] [[1980]] |
   gebortestee                 = [[Mol]] |
   geborteland                 = [[België]] |
   lengte                      = 192 |
