*Empty MediaWiki Message*

--- a/Maurits_Sabbe_(schryver).mw
+++ b/Maurits_Sabbe_(schryver).mw
@@ -1,9 +1,9 @@
 {{Veranderplat|Brugs}}
-'''Maurits Karel Maria Willem Sabbe''' ([[Brugge]], [[9 februoari]] [[1873]] – [[Antwerpen]], [[12 februoari]] [[1938]]) was e [[Vloandern|Vlamsche]] schryver en vôorvechter van de [[Vlaamse Beweging]].
+'''Maurits Karel Maria Willem Sabbe''' ([[Brugge]], [[9 februoari]] [[1873]] – [[Antwerpen]], [[12 februoari]] [[1938]]) was e [[Vloandern|Vlamsche]] schryver en vôorvechter van de [[Vlamsche Bewegienge]].
 
 ==Biografie==
-De voader van Maurits Sabbe was Julius Sabbe, e schryver en gekend liberoal. Ie was 'n oudsten van zeevn kienders en studêerdege filosofie en lettern an de universiteit van [[Gent]]. Doarachter was 't ie êest leroare Nederlans an 't Keuninklik Atheneum in Brugge. In 1903 werd ie ton leroare in [[Mecheln]] en vanaf 1907 gaft ie ôok lesse in de tonêelklasse van 't Keuninklik Vlams Conservatorium van [[Antwerpn]].<br>
-In 1919 werd ie conservator an 't Plantin-Moretusmuseum in Antwerpn en vanaf 1923 oogleroare in de Nederlandse letterkunde an de [[Vrije Universiteit van Brussel]]. Ie was getrouwd me Gabriëlla De Smet.
+De voader van Maurits Sabbe was Julius Sabbe, e schryver en gekend liberoal. Ie was 'n oudsten van zeevn kienders en studêerdege filosofie en lettern an den universiteit van [[Gent]]. Doarachter was 't ie êest leroare Nederlands an 't Keuninklik Atheneum in Brugge. In 1903 wierd ie ton leroare in [[Mecheln]] en vanaf 1907 gaft ie ôok lesse in de tonêelklasse van 't Keuninklik Vlams Conservatorium van [[Antwerpn]].<br>
+In 1919 wierd ie conservator an 't Plantin-Moretusmuseum in Antwerpn en vanaf 1923 oogleroare in de Nederlandse letterkunde an de [[VUB|Vrije Universiteit van Brussel]]. Ie was getrouwd me Gabriëlla De Smet.
 
 Maurits Sabbe ligt begraavn ip 't erepark van 't Schoonselhof in Antwerpn. In 1950 is 't er e bostbild van em geplatst by 't Sasuus an 't [[Minnewoater]] in Brugge.
 
