--- a/Verschillen_Vlams,_Ollands_en_West-Vlams.mw
+++ b/Verschillen_Vlams,_Ollands_en_West-Vlams.mw
@@ -31,7 +31,7 @@ Soms kun je zien dat 't Ollands en 't West-Vlams mêer noa 't Frans trekkn.
 |-
 |geld opdoen||geld uitgeven || geld verdoen/verbusken
 |-
-|glaswolvezel||glasvezelwol || 
+|glaswolvezel||glasvezelwol || glaswulle
 |-
 |je hebt het zitten||je hebt pech ||j'eit an unen rekker, j'eit zitt'n
 |-
@@ -73,7 +73,7 @@ Soms kun je zien dat 't Ollands en 't West-Vlams mêer noa 't Frans trekkn.
 |-
 |vuilbak||prullenbak (Noord-Brabant: beiden)|| vuulbak
 |-
-|wandelen, lopen||lopen, rennen || wandel'n, lôpen
+|wandelen, lopen||lopen, rennen || wandeln, lôpen
 |-
 |wijsheidstand||verstandskies || 
 |-
