*Empty MediaWiki Message*

--- a/Yvegem.mw
+++ b/Yvegem.mw
@@ -16,7 +16,7 @@
 |postcode=8570
 |}}
 
-'''Yvegem''' (in 't Nederlands ''Ingooigem'') is e dêelgemêente van [[Anzegem]]. 't Weun oungeveer 2200 minsn.
+'''Yvegem''' (in 't Nederlands ''Ingooigem'') is e dêelgemêente van [[Anzegem]]. 't Weunn oungeveer 2200 minsn.
 
 ==Noame==
 De noame komt van 't [[Germaansche toaln|Germoans]] ''*Ingwihaheim'', dus de weunplekke van Ingwiha (en zyn famille).
