The file [[:Image:Puerto_Banus_2005_5.jpg]] has been replaced by [[:Image:Harbor_in_Puerto_Banus,_Costa_del_Sol,_Spain,_Dec_2004_3.jpg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:Commons

--- a/Costa_del_Sol.mw
+++ b/Costa_del_Sol.mw
@@ -1,4 +1,4 @@
-[[image:Puerto Banus 2005 5.jpg|thumb|De sjieke badplekke [[Marbella]]]]
+[[image:Harbor_in_Puerto_Banus,_Costa_del_Sol,_Spain,_Dec_2004_3.jpg|thumb|De sjieke badplekke [[Marbella]]]]
 [[Image:Benalmadena.jpg|thumb|right|Ligstrand by [[Benalmadena]]]]
 
 De '''Costa del Sol''' (Spoans vo ''zunnige kust'') es de [[Spanje|Spoansche]] zudelikke kuststroke van 300 kilomeiter lank langs de [[Middellandsche Zee]]. Ze ligt in de [[Spoansche regio|regio]] [[Andalusië]] en lopt van [[Almeria]] tot [[Gibraltar]].
